# opencv-advanced-imshow

./: CMakeLists.txt  readme.md
cmake_modules/: FindSFML.cmake
src/: main.cpp
src/oai/: drag_manager.h  image_view.h  rect_select_manager.h  rgba_transformer.h  ui_manager.h  zoom_manager.h
